refactor: refatorando algumas classes