@@ -3,17 +3,21 @@ package com.senai.controle_de_acesso_spring.application.dto.turma.horario;
 import com.senai.controle_de_acesso_spring.domain.model.entity.turma.horarios.AulasDoDia;
 
 import java.time.DayOfWeek;
+import java.util.ArrayList;
 import java.util.List;
+import java.util.stream.Collectors;
 
 public record AulasDoDiaDTO(
         Long id,
         DayOfWeek diaDaSemana,
+        HorarioBaseDTO horarioBaseDTO,
         List<AulaDTO> aulas
 ) {
     public static AulasDoDiaDTO toDTO(AulasDoDia d) {
         return new AulasDoDiaDTO(
                 d.getId(),
                 d.getDiaDaSemana(),
+                HorarioBaseDTO.toDTO(d.getHorario()),
                 d.getAulas().stream().map(AulaDTO::toDTO).toList()
         );
     }
@@ -21,7 +25,8 @@ public record AulasDoDiaDTO(
     public AulasDoDia fromDTO() {
         AulasDoDia dia = new AulasDoDia();
         dia.setDiaDaSemana(diaDaSemana);
-        dia.setAulas(aulas.stream().map(AulaDTO::fromDTO).toList());
+        dia.setHorario(HorarioBaseDTO.fromDTO(horarioBaseDTO));
+        dia.setAulas(aulas.stream().map(AulaDTO::fromDTO).collect(Collectors.toList()));
         return dia;
     }
 }
